third_party/move/tools/move-decompiler/tests/compiler-v2-test/more-v1/translated_ir_tests/move/commands/consume_stack.exp
module 0x8675309::M {
    struct R has key {
        data: vector<u8>,
    }
    public fun is_ok(addr: address): bool {
        is_ok_(&addr, &borrow_global(0x1d8).data)
    }
    fun is_ok_(_addr: &address, _data: &vector<u8>): bool {
        true
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: cannot use `u16|u32|u64|u128|u256` with an operator which expects a value of type `address`
  ┌─ consume_stack.move:6:38
  │
6 │         is_ok_(&addr, &borrow_global(0x1d8).data)
  │                                      ^^^^^
